fix java storage problem