@@ -1,13 +1,37 @@
-ThisBuild / version := "0.1.0-SNAPSHOT"
 ThisBuild / scalaVersion := "2.13.14"
 
 lazy val root = (project in file("."))
   .settings(
-    name := "microservice1",
+    name := "weather-recognition",
+
     libraryDependencies ++= Seq(
-      "org.apache.spark" %% "spark-core" % "3.5.8" % Provided,
-      "org.apache.spark" %% "spark-sql"  % "3.5.8" % Provided,
-      "org.apache.logging.log4j" % "log4j-api" % "2.24.3",
-      "org.apache.logging.log4j" % "log4j-core" % "2.24.3"
+      "org.apache.spark" %% "spark-core" % "3.5.1",
+      "org.apache.spark" %% "spark-sql"  % "3.5.1"
+    ),
+
+    fork := true,
+
+    javaOptions ++= Seq(
+      "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
+      "--add-opens=java.base/java.lang=ALL-UNNAMED",
+      "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+      "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+      "--add-opens=java.base/java.io=ALL-UNNAMED",
+      "--add-opens=java.base/java.net=ALL-UNNAMED",
+      "--add-opens=java.base/java.nio=ALL-UNNAMED",
+      "--add-opens=java.base/java.util=ALL-UNNAMED",
+      "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+      "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+      "--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED",
+      "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+      "--add-opens=java.base/sun.nio.cs=ALL-UNNAMED",
+      "--add-opens=java.base/sun.security.action=ALL-UNNAMED",
+      "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED",
+      "-Dhadoop.home.dir=C:\\hadoop",
+      "-Djava.library.path=C:\\hadoop\\bin",
+      "-Dorg.apache.hadoop.io.nativeio.NativeIO$Windows.disable=true",
+      "-Dspark.hadoop.io.nativeio.disable=true",
+      "-Xms2G",
+      "-Xmx8G"
     )
   )
